--- a/index.html
+++ b/index.html
@@ -13,15 +13,31 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="image1.jpg" class="d-block w-100" alt="...">
+            <img src="img/img1.JPG" class="d-block w-100" alt="...">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi dignissimos molestiae incidunt magnam, aperiam non dolore velit minima nihil nemo enim, quibusdam corporis fugiat? Maiores vel dolor odio aliquid omnis.</p>
           </div>
           <div class="carousel-item">
-            <img src="image2.jpg" class="d-block w-100" alt="...">
+            <img src="img/img2.JPG" class="d-block w-100" alt="...">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis suscipit vel voluptas quisquam sapiente blanditiis eveniet amet quae. Aliquid, assumenda nobis porro voluptate alias sequi dolores beatae vel. Nemo, placeat.</p>
           </div>
           <div class="carousel-item">
-            <img src="image4.jpg" class="d-block w-100" alt="...">
+            <img src="img/img3.JPG" class="d-block w-100" alt="...">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veniam cupiditate ab corrupti, nobis laborum. Possimus similique quo facere dicta repellendus veniam voluptatem amet consectetur? Ipsum odio explicabo totam quam.</p>
+          </div>
+          <div class="carousel-item">
+            <img src="img/img4.JPG" class="d-block w-100" alt="...">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veniam cupiditate ab corrupti, nobis laborum. Possimus similique quo facere dicta repellendus veniam voluptatem amet consectetur? Ipsum odio explicabo totam quam.</p>
+          </div>
+          <div class="carousel-item">
+            <img src="img/img5.JPG" class="d-block w-100" alt="...">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veniam cupiditate ab corrupti, nobis laborum. Possimus similique quo facere dicta repellendus veniam voluptatem amet consectetur? Ipsum odio explicabo totam quam.</p>
+          </div>
+          <div class="carousel-item">
+            <img src="img/img6.JPG" class="d-block w-100" alt="...">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veniam cupiditate ab corrupti, nobis laborum. Possimus similique quo facere dicta repellendus veniam voluptatem amet consectetur? Ipsum odio explicabo totam quam.</p>
+          </div>
+          <div class="carousel-item">
+            <img src="img/img7.JPG" class="d-block w-100" alt="...">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veniam cupiditate ab corrupti, nobis laborum. Possimus similique quo facere dicta repellendus veniam voluptatem amet consectetur? Ipsum odio explicabo totam quam.</p>
           </div>
         </div>
