--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="new_slider_food.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
@@ -15,31 +15,46 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/img1.JPG" class="d-block w-100" alt="...">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi dignissimos molestiae incidunt magnam, aperiam non dolore velit minima nihil nemo enim, quibusdam corporis fugiat? Maiores vel dolor odio aliquid omnis.</p>
+            <p>
+              Десерт лимон із Амальфи | Amalfi lemon dessert
+            </p>
           </div>
           <div class="carousel-item">
             <img src="img/img2.JPG" class="d-block w-100" alt="...">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis suscipit vel voluptas quisquam sapiente blanditiis eveniet amet quae. Aliquid, assumenda nobis porro voluptate alias sequi dolores beatae vel. Nemo, placeat.</p>
+            <p>
+              Ванільна панакота з лісовими ягодами | Vanilla panna cotta with wild berries
+            </p>
           </div>
           <div class="carousel-item">
             <img src="img/img3.JPG" class="d-block w-100" alt="...">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veniam cupiditate ab corrupti, nobis laborum. Possimus similique quo facere dicta repellendus veniam voluptatem amet consectetur? Ipsum odio explicabo totam quam.</p>
+            <p>
+              Семіфредо ескімо з обліпихи |  Eskimo semifreddo with sea buckthorn
+            </p>
           </div>
           <div class="carousel-item">
             <img src="img/img4.JPG" class="d-block w-100" alt="...">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veniam cupiditate ab corrupti, nobis laborum. Possimus similique quo facere dicta repellendus veniam voluptatem amet consectetur? Ipsum odio explicabo totam quam.</p>
+            <p>
+              Олів'є з лососем, перепелиним яйцем та червоним кав'яром | Оlivier with salmon, quail egg and red caviar
+            </p>
           </div>
           <div class="carousel-item">
             <img src="img/img5.JPG" class="d-block w-100" alt="...">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veniam cupiditate ab corrupti, nobis laborum. Possimus similique quo facere dicta repellendus veniam voluptatem amet consectetur? Ipsum odio explicabo totam quam.</p>
+            <p>
+              Салат з тигровими креветками  та гуакамоле з авокадо | Tiger prawn salad and avocado guacamole
+            </p>
           </div>
           <div class="carousel-item">
             <img src="img/img6.JPG" class="d-block w-100" alt="...">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veniam cupiditate ab corrupti, nobis laborum. Possimus similique quo facere dicta repellendus veniam voluptatem amet consectetur? Ipsum odio explicabo totam quam.</p>
+            <p>
+              Томлені телячі щічки з картопляним пюре | Braised veal cheeks with mashed potatoes
+            </p>
           </div>
           <div class="carousel-item">
             <img src="img/img7.JPG" class="d-block w-100" alt="...">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veniam cupiditate ab corrupti, nobis laborum. Possimus similique quo facere dicta repellendus veniam voluptatem amet consectetur? Ipsum odio explicabo totam quam.</p>
+            <p>
+              Філе форелі на пару з спагетті з овочів з імбирним ароматом |
+              Steamed trout fillet with ginger-flavored vegetable spaghetti
+            </p>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
